--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://www.jitpack.io' }
     }
 
     dependencies {
@@ -16,6 +17,7 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://www.jitpack.io' }
     }
 }
 
@@ -53,5 +55,8 @@ android {
         implementation 'androidx.browser:browser:1.6.0'
         implementation 'androidx.appcompat:appcompat:1.6.1'
         implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+        implementation 'com.github.Curzibn:Luban:1.1.8'
+        implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+        implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     }
 }
